# luminarytrade

./: pnpm-lock.yaml
backend/: nest-cli.json  package-lock.json  package.json  tsconfig.json
backend/i18n/de/: messages.json
backend/i18n/en/: messages.json
backend/i18n/es/: messages.json
backend/i18n/fr/: messages.json
backend/i18n/ja/: messages.json
backend/i18n/zh/: messages.json
backend/src/: app.module.ts  main.ts
backend/src/adapters/: AI_PROVIDER_FALLBACK_DOCUMENTATION.md
backend/src/agent/: indexer.service.ts
backend/src/alerting/: alerting.module.ts  alerting.service.ts
backend/src/analytics/: analytics-lazy.service.ts  analytics.gateway.ts  analytics.module.ts  analytics.resolver.ts  analytics.service.ts  (+1 more)
contracts/affiliate-bonus/: Cargo.toml  README.md
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs
contracts/bridge/tests/: bridge.rs
contracts/bug-bounty/: Cargo.toml  README.md
contracts/credit-features-waitlist/: Cargo.toml  README.md
contracts/credit-score/: Cargo.toml
contracts/crypto-waitlist/: Cargo.toml  README.md
contracts/governance/: Cargo.toml
contracts/referral-rewards/: Cargo.toml
contracts/staking-bonuses/: Cargo.toml
contracts/token-launch-waitlist/: Cargo.toml
frontend/: CHART_PERFORMANCE_PROFILING.md  DEBUG_GUIDE.md  DEBUG_SUMMARY.md  GROWTH_FEATURES.md  HEALTH_CHECK.md  IMPLEMENTATION_SUMMARY.md  PUSH_NOTIFICATIONS_README.md  PUSH_NOTIFICATIONS_TESTING.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  service-worker.ts
(+246 files in other folders)
