[package]
name = "bridge"
version = "0.1.0"
description = "Cross-chain bridge contract for LuminaryTrade with M-of-N relayer consensus"
authors = ["LuminaryTrade Team"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
stellar-xdr = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
